is working again

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
   <div class="vertical-center">
     <h1>The app is running correctly.</h1>
 
-
+    <h2>Yes the app is running</h2>
     <p>Welcome to the Sparta Test App</p>
     <img src="/images/logo.png" />
   </div>
